--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                     <div class="platform__description">
                         <p>
                             Sé parte de los universos de Warner Bros., DC Comics, HBO, Cartoon Network y mucho más.
+                            Conoce esta nueva plataforma y disfruta de nuevos contenidos.
                         </p>
                     </div>
 
@@ -610,49 +611,32 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">1 Cuenta Individual</h3>
-                            </div>
-                            <div class="plaftorm_plan_data">
-                                <p class="platform_data_price"><span>S/.</span><b>7.90</b></p>
-                                <p class="platform_data_retail txt-first-color">Mensual</p>
-                                <div class="platform_data_details">
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Salto de canciones</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Descarga tu música</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Sin anuncios</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
-                                </div>
-                            </div> 
-                         </div>
-
-                         <div class="platform_plan">
-                            <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">1 Cuenta Individual</h3>
-                            </div>
-                            <div class="plaftorm_plan_data">
-                                <p class="platform_data_price"><span>S/.</span><b>12.90</b></p>
-                                <p class="platform_data_retail txt-first-color">por 2 Meses</p>
-                                <div class="platform_data_details">
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Salto de canciones</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Descarga tu música</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Sin anuncios</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 60 días</p>
-                                </div>
-                            </div> 
-                         </div>
-
-                         <div class="platform_plan">
-                            <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">2 Cuentas</h3>
+                                <h3 class="text-color-white uppercase">Individual</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>9.90</b></p>
                                 <p class="platform_data_retail txt-first-color">Mensual</p>
-
                                 <div class="platform_data_details">
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Salto de canciones</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Descarga tu música</p>
+                                    <p class="data_detail"><i class="far fa-check-circle"></i> 1 Cuenta Personal</p>
+                                    <p class="data_detail"><i class="far fa-check-circle"></i> Audio de calidad maestra (hasta 9216 Kbps).</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Sin anuncios</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 60 días</p>
+                                    <p class="data_detail"><i class="far fa-check-circle"></i> Descargar ilimitadas</p>
+                                </div>
+                            </div> 
+                         </div>
+
+                         <div class="platform_plan">
+                            <div class="platform_plan_title">
+                                <h3 class="text-color-white uppercase">Dúo</h3>
+                            </div>
+                            <div class="plaftorm_plan_data">
+                                <p class="platform_data_price"><span>S/.</span><b>15.90</b></p>
+                                <p class="platform_data_retail txt-first-color">Mensual</p>
+                                <div class="platform_data_details">
+                                    <p class="data_detail"><i class="far fa-check-circle"></i> 2 Cuentas Personales</p>
+                                    <p class="data_detail"><i class="far fa-check-circle"></i> Audio de calidad maestra (hasta 9216 Kbps).</p>
+                                    <p class="data_detail"><i class="far fa-check-circle"></i> Sin anuncios</p>
+                                    <p class="data_detail"><i class="far fa-check-circle"></i> Descargar ilimitadas</p>
                                 </div>
                             </div> 
                          </div>
@@ -711,7 +695,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Familiar x3</h3>
+                                <h3 class="text-color-white uppercase">Combo Familiar</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>62.90</b></p>
@@ -754,22 +738,7 @@
                                 <div class="platform_data_details">
                                     <p class="data_detail"><i class="far fa-check-circle"></i> 1 Dispositivo</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Calidad HD-SD</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
-                                </div>
-                            </div> 
-                         </div>
-
-                         <div class="platform_plan">
-                            <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Estándar</h3>
-                            </div>
-                            <div class="plaftorm_plan_data">
-                                <p class="platform_data_price"><span>S/.</span><b>12.90</b></p>
-                                <p class="platform_data_retail txt-first-color">Mensual</p>
-                                <div class="platform_data_details">
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> 1 Dispositivo</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Calidad HD-SD</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
+                                    <p class="data_detail"><i class="far fa-check-circle"></i> +70 Canales en Vivo</p>
                                 </div>
                             </div> 
                          </div>
@@ -779,13 +748,13 @@
                                 <h3 class="text-color-white uppercase">Familiar</h3>
                             </div>
                             <div class="plaftorm_plan_data">
-                                <p class="platform_data_price"><span>S/.</span><b>17.90</b></p>
+                                <p class="platform_data_price"><span>S/.</span><b>14.90</b></p>
                                 <p class="platform_data_retail txt-first-color">Mensual</p>
 
                                 <div class="platform_data_details">
                                     <p class="data_detail"><i class="far fa-check-circle"></i> 4 Dispositivos</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Calidad HD-SD</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
+                                    <p class="data_detail"><i class="far fa-check-circle"></i> +70 Canales en Vivo</p>
                                 </div>
                             </div> 
                          </div>
