--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <i class="far fa-hand-point-up text-color-white" ></i>
                     </div>
                     <div class="instruct__card-title">
-                        <h1 class="text-color-white">ELIGE TU CUENTA</h1>
+                        <h1 class="text-color-white text-bold">ELIGE TU CUENTA</h1>
                     </div>
                     <div class="instruct__card-description">
                         <p class="text-color-white">Elige algunos de los planes que ofrecemos.</p>
@@ -240,7 +240,6 @@
                                 <div class="platform_data_details">
                                     <p class="data_detail"><i class="far fa-check-circle"></i> 1 Dispositivo</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Calidad Ultra HD</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
                                 </div>
                             </div> 
                          </div>
@@ -255,7 +254,6 @@
                                 <div class="platform_data_details">
                                     <p class="data_detail"><i class="far fa-check-circle"></i> 2 Dispositivos</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Calidad Ultra HD</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
                                 </div>
                             </div> 
                          </div>
@@ -271,7 +269,6 @@
                                 <div class="platform_data_details">
                                     <p class="data_detail"><i class="far fa-check-circle"></i> 4 Dispositivos</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Calidad Ultra HD</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
                                 </div>
                             </div> 
                          </div>
@@ -354,7 +351,6 @@
                                 <div class="platform_data_details">
                                     <p class="data_detail"><i class="far fa-check-circle"></i> 1 Dispositivo</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Calidad Ultra HD</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
                                 </div>
                             </div> 
                          </div>
@@ -369,7 +365,6 @@
                                 <div class="platform_data_details">
                                     <p class="data_detail"><i class="far fa-check-circle"></i> 2 Dispositivos</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Calidad Ultra HD</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
                                 </div>
                             </div> 
                          </div>
@@ -385,7 +380,6 @@
                                 <div class="platform_data_details">
                                     <p class="data_detail"><i class="far fa-check-circle"></i> 4 Dispositivos</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Calidad Ultra HD</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
                                 </div>
                             </div> 
                          </div>
@@ -420,7 +414,6 @@
                                 <div class="platform_data_details">
                                     <p class="data_detail"><i class="far fa-check-circle"></i> 1 Dispositivo</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Calidad Ultra HD</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
                                 </div>
                             </div> 
                          </div>
@@ -435,7 +428,6 @@
                                 <div class="platform_data_details">
                                     <p class="data_detail"><i class="far fa-check-circle"></i> 2 Dispositivos</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Calidad Ultra HD</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
                                 </div>
                             </div> 
                          </div>
@@ -451,7 +443,6 @@
                                 <div class="platform_data_details">
                                     <p class="data_detail"><i class="far fa-check-circle"></i> 3 Dispositivos</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Calidad Ultra HD</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
                                 </div>
                             </div> 
                          </div>
@@ -710,7 +701,6 @@
                                 <div class="platform_data_details">
                                     <p class="data_detail"><i class="far fa-check-circle"></i> 2 Dispositivos</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Canales, series y peliculas</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
                                 </div>
                             </div> 
                          </div>
@@ -725,7 +715,6 @@
                                 <div class="platform_data_details">
                                     <p class="data_detail"><i class="far fa-check-circle"></i> 3 Dispositivos</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Canales, series y peliculas</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
                                 </div>
                             </div> 
                          </div>
